add sample to retrieve objects

--- a/src/Sample/wwwroot/index.html
+++ b/src/Sample/wwwroot/index.html
@@ -28,6 +28,31 @@
             pp.Impersonate(el.value);
         }
 
+        function getObjects() {
+            var pp = window.powerplanning;
+            if (pp == null)
+                return;
+            var el = document.getElementById('objects');
+            var elp = document.getElementById('objectsParent');
+            while (el.childNodes.length > 0)
+                el.removeChild(el.childNodes[0]);
+            pp.GetObjects(elp.value).then((objects) => {
+                if (objects == null)
+                    return;
+                var fragment = document.createDocumentFragment();
+                var i = 0;
+                for (i = 0; i < objects.length; i++) {
+                    var object = objects[i];
+                    var elc = document.createElement('span');
+                    elc.innerText = object.Name;
+                    fragment.appendChild(elc);
+                    var elbr = document.createElement('br');
+                     fragment.appendChild(elbr);
+                }
+                el.appendChild(fragment);
+            });
+        }
+
         function create1() {
             var pp = window.powerplanning;
             if (pp == null)
@@ -64,13 +89,16 @@
     <p>This is a sample of PowerPlanning SDK</p>
     <input type="button" onclick="configure()" value="Configure" />
     <input type="button" onclick="impersonate()" value="Impersonate" />
+    <input type="button" onclick="getObjects()" value="GetObjects" />
     <input type="button" onclick="create1()" value="Create1" />
     <input type="button" onclick="create2()" value="Create2" />
     <input type="button" onclick="create3()" value="Create3" />
     <input type="button" onclick="destroy()" value="Destroy" />
     <br />
     <span>User email:</span><input id="email" type="text" value="admin@sysphera.com" />
+    <span>Objects Parent:</span><input id="objectsParent" type="text" value="" />
     <br />
+    <div class="object" id="objects"></div>
     <div class="object" id="obj1"></div>
     <div class="object" id="obj2"></div>
     <div class="object" id="obj3"></div>
