--- a/src/Sample/wwwroot/index.html
+++ b/src/Sample/wwwroot/index.html
@@ -50,6 +50,9 @@
                      fragment.appendChild(elbr);
                 }
                 el.appendChild(fragment);
+            }).catch((e) => {
+                var el = document.getElementById('exception');
+                el.value = e;
             });
         }
 
@@ -115,6 +118,7 @@
     <span>Object Code:</span><input id="objectCode" type="text" value="167" />
     <span>User email:</span><input id="email" type="text" value="admin@sysphera.com" />
     <span>Objects Parent:</span><input id="objectsParent" type="text" value="" />
+    <span>Exception:</span><input id="exception" type="text" value="" />
 
     <br />
     <div class="object" id="objects"></div>
