Revert default values in inputs.

--- a/src/Sample/wwwroot/index.html
+++ b/src/Sample/wwwroot/index.html
@@ -29,9 +29,9 @@
     <input type="button" onclick="destroy()" value="Destroy" />
     <input type="button" onclick="logout()" value="Logout" />
     <br />
-    <span>Object Code:</span><input id="objectCode" type="text" value="" />
-    <span>User email:</span><input id="email" type="text" value="hjunior@tech6group.com" />
-    <span>Objects Parent:</span><input id="objectsParent" type="text" value="2193" />
+    <span>Object Code:</span><input id="objectCode" type="text" value="167" />
+    <span>User email:</span><input id="email" type="text" value="admin@sysphera.com" />
+    <span>Objects Parent:</span><input id="objectsParent" type="text" value="" />
     <span>Exception:</span><input id="exception" type="text" value="" />
 
     <br />
